fix a prewrap edge case issue

--- a/assets/sass/base/_normalize.scss
+++ b/assets/sass/base/_normalize.scss
@@ -89,6 +89,7 @@ hr {
 pre {
     font-family: monospace, monospace; /* 1 */
     font-size: 1em; /* 2 */
+    white-space: pre-wrap;
 }
 
 /* Text-level semantics
